# HW_14_python_web

./: .coverage  .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
htmlcov/: d_67d056e3707ef46d_config_py.html  d_67d056e3707ef46d_db_py.html  d_67d056e3707ef46d_models_py.html  d_b00f73a1b187b234_contacts_py.html  d_b00f73a1b187b234_user_py.html  d_d23880557e337f5c_contacts_py.html  d_d23880557e337f5c_users_py.html  index.html  status.json
migrations/: env.py
migrations/versions/: 209dc6b6d2ff_change_date.py  6a3e3a996e63_add_table_users.py  80ae6ec4161b_add_table_users.py  a510cd198a17_add_verify_email_for_users.py  b08c37407925_init.py  b15b05ba2681_edit_date.py
postgres-data/: postmaster.pid
postgres-data/global/: 1260  1262  2671  pg_control
src/database/: config.py  db.py  messages.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  user.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_repository_users.py  test_routes_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
